{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 17,
  "lineage": "95ff23ca-309b-8ba4-2f18-82057468d7bd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "doveLinux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bb4c991fa89d4b9b",
            "arn": "arn:aws:ec2:us-east-1:137370044763:instance/i-0ddc30fc6cfce2c4b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ddc30fc6cfce2c4b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dovekey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d843b7c94ca0af05",
            "private_dns": "ip-10-0-1-122.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.122",
            "public_dns": "ec2-204-236-204-178.compute-1.amazonaws.com",
            "public_ip": "204.236.204.178",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f267ce1d46ef9016",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0adb556bef9400d45",
            "tags": {
              "Name": "doveLinux-Instance",
              "Project": "Horpeyemi"
            },
            "tags_all": {
              "Name": "doveLinux-Instance",
              "Project": "Horpeyemi"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0609810014f7d1b8f"
            ]
          },
          "dependencies": [
            "aws_key_pair.dove-key",
            "aws_security_group.doveSG",
            "aws_subnet.dove-pub-1",
            "aws_vpc.dove_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dove-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:internet-gateway/igw-0929f4a81cad94a12",
            "id": "igw-0929f4a81cad94a12",
            "owner_id": "137370044763",
            "tags": {
              "Name": "opeseen-igw"
            },
            "tags_all": {
              "Name": "opeseen-igw"
            },
            "vpc_id": "vpc-0f6d4969616d00d6f"
          },
          "dependencies": [
            "aws_vpc.dove_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dove-pub-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:route-table/rtb-036589f69f1430ab3",
            "id": "rtb-036589f69f1430ab3",
            "owner_id": "137370044763",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0929f4a81cad94a12",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "opeseen-pub-RT"
            },
            "tags_all": {
              "Name": "opeseen-pub-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6d4969616d00d6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dove-igw",
            "aws_vpc.dove_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "doce-pub-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08db2adf66be2712d",
            "route_table_id": "rtb-036589f69f1430ab3",
            "subnet_id": "subnet-0adb556bef9400d45"
          },
          "dependencies": [
            "aws_internet_gateway.dove-igw",
            "aws_route_table.dove-pub-RT",
            "aws_subnet.dove-pub-1",
            "aws_vpc.dove_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "doce-pub-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd79a16c77a8040c",
            "route_table_id": "rtb-036589f69f1430ab3",
            "subnet_id": "subnet-033ce82111937ef07"
          },
          "dependencies": [
            "aws_internet_gateway.dove-igw",
            "aws_route_table.dove-pub-RT",
            "aws_subnet.dove-pub-2",
            "aws_vpc.dove_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "doce-pub-3a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f34114c28a6f0b27",
            "route_table_id": "rtb-036589f69f1430ab3",
            "subnet_id": "subnet-0b338f8d890b4b9b9"
          },
          "dependencies": [
            "aws_internet_gateway.dove-igw",
            "aws_route_table.dove-pub-RT",
            "aws_subnet.dove-pub-3",
            "aws_vpc.dove_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "doveSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:security-group/sg-0609810014f7d1b8f",
            "description": "Security group for dove ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0609810014f7d1b8f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dove-stack-sg",
            "name_prefix": "",
            "owner_id": "137370044763",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh connection"
            },
            "tags_all": {
              "Name": "allow-ssh connection"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6d4969616d00d6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dove_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-priv-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:subnet/subnet-094183b8c61b39589",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094183b8c61b39589",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "137370044763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "opeseen-priv-1"
            },
            "tags_all": {
              "Name": "opeseen-priv-1"
            },
            "vpc_id": "vpc-0f6d4969616d00d6f"
          },
          "dependencies": [
            "aws_vpc.dove_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-priv-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:subnet/subnet-0c6e0881df3ba8ae7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6e0881df3ba8ae7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "137370044763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "opeseen-priv-2"
            },
            "tags_all": {
              "Name": "opeseen-priv-2"
            },
            "vpc_id": "vpc-0f6d4969616d00d6f"
          },
          "dependencies": [
            "aws_vpc.dove_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-priv-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:subnet/subnet-0c2d6f4cc1952a4d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2d6f4cc1952a4d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "137370044763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "opeseen-priv-3"
            },
            "tags_all": {
              "Name": "opeseen-priv-3"
            },
            "vpc_id": "vpc-0f6d4969616d00d6f"
          },
          "dependencies": [
            "aws_vpc.dove_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:subnet/subnet-0adb556bef9400d45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0adb556bef9400d45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "137370044763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "opeseen-pub-1"
            },
            "tags_all": {
              "Name": "opeseen-pub-1"
            },
            "vpc_id": "vpc-0f6d4969616d00d6f"
          },
          "dependencies": [
            "aws_vpc.dove_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-pub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:subnet/subnet-033ce82111937ef07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033ce82111937ef07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "137370044763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "opeseen-pub-2"
            },
            "tags_all": {
              "Name": "opeseen-pub-2"
            },
            "vpc_id": "vpc-0f6d4969616d00d6f"
          },
          "dependencies": [
            "aws_vpc.dove_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-pub-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:subnet/subnet-0b338f8d890b4b9b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b338f8d890b4b9b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "137370044763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "opeseen-pub-3"
            },
            "tags_all": {
              "Name": "opeseen-pub-3"
            },
            "vpc_id": "vpc-0f6d4969616d00d6f"
          },
          "dependencies": [
            "aws_vpc.dove_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dove_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:vpc/vpc-0f6d4969616d00d6f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-050ae9cc24658d703",
            "default_route_table_id": "rtb-0b9b2aa488d94dbed",
            "default_security_group_id": "sg-0de536fb94ef67b52",
            "dhcp_options_id": "dopt-03c9a2e95025c980c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f6d4969616d00d6f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b9b2aa488d94dbed",
            "owner_id": "137370044763",
            "tags": {
              "Name": "opeseen_vpc"
            },
            "tags_all": {
              "Name": "opeseen_vpc"
            }
          }
        }
      ]
    }
  ]
}